<resources>
    <string name="app_name">android-node</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="place">Place</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="password">password</string>
    <string name="add">add</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="add_new_activity">add new activity</string>
    <string name="add_new_participant">add new participant</string>
    <string name="admin">admin</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="startdate">Start date</string>
    <string name="endDate">End date</string>
    <string name="participants_limit">Participants limit</string>
    <string name="submit">Submit</string>
    <string name="participant">Participants</string>
    <string name="log_out">Log Out</string>
    <string name="this_is_actcity">This is actcity:</string>
    <string name="remove">remove</string>

</resources>
